--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,234 +1,106 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    <title>Xodó da Preta  - Home</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+{% block title %}Xodó da Preta - Home{% endblock %}
 
-   <!-- Ícones -->
- <link rel="apple-touch-icon" href="{{ url_for('static', filename='zay/assets/img/apple-icon.png') }}">
- <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='zay/assets/img/favicon.ico') }}">
-
- <!-- CSS principal -->
- <link rel="stylesheet" href="{{ url_for('static', filename='zay/assets/css/bootstrap.min.css') }}">
- <link rel="stylesheet" href="{{ url_for('static', filename='zay/assets/css/templatemo.css') }}">
- <link rel="stylesheet" href="{{ url_for('static', filename='zay/assets/css/custom.css') }}">
- <link rel="stylesheet" href="{{ url_for('static', filename='zay/assets/css/fontawesome.min.css') }}">
- <!-- Custom CSS -->
- <link rel="stylesheet" href="{{ url_for('static', filename='zay/assets/css/custom.css') }}">
-
- <!-- Google Fonts -->
- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap">
-
- <!-- Font Awesome -->
- <link rel="stylesheet" href="{{ url_for('static', filename='zay/assets/css/fontawesome.min.css') }}">
-
- <!--
-    
- TemplateMo 559 Zay Shop
-
- https://templatemo.com/tm-559-zay-shop
-
- -->
-</head>
-
-<body>
-    <!-- Start Top Nav -->
-    {% include 'partials/topbar.html' %}
-
-    
-    <!-- Header -->
-    <nav class="navbar navbar-expand-lg navbar-light shadow">
-        <div class="container d-flex justify-content-between align-items-center">
-
-            <a class="navbar-brand text-success logo h1 align-self-center" href="{{ url_for('home') }}">
-                Xodó da Preta 
-            </a>
-
-            <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#templatemo_main_nav" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="align-self-center collapse navbar-collapse flex-fill  d-lg-flex justify-content-lg-between" id="templatemo_main_nav">
-                <div class="flex-fill">
-                    <ul class="nav navbar-nav d-flex justify-content-between mx-lg-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('home') }}">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('about') }}">Sobre mim</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('shop') }}">Loja</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('contact') }}">Contato</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="navbar align-self-center d-flex">
-                    <div class="d-lg-none flex-sm-fill mt-3 mb-4 col-7 col-sm-auto pr-3">
-                        <div class="input-group">
-                            <input type="text" class="form-control" id="inputMobileSearch" placeholder="Search ...">
-                            <div class="input-group-text">
-                                <i class="fa fa-fw fa-search"></i>
-                            </div>
+{% block content %}
+<!-- Start Banner Hero -->
+<div id="template-mo-zay-hero-carousel" class="carousel slide" data-bs-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-bs-target="#template-mo-zay-hero-carousel" data-bs-slide-to="0" class="active"></li>
+        <li data-bs-target="#template-mo-zay-hero-carousel" data-bs-slide-to="1"></li>
+        <li data-bs-target="#template-mo-zay-hero-carousel" data-bs-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <div class="container">
+                <div class="row p-5">
+                    <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
+                        <img class="img-fluid" src="{{ url_for('static', filename='zay/assets/img/banner_img_01.jpg') }}" alt="">
+                    </div>
+                    <div class="col-lg-6 mb-0 d-flex align-items-center">
+                        <div class="text-align-left align-self-center">
+                            <h1 class="h1 text-success"><b> </b> Xodo da Preta</h1>
+                            <h3 class="h2"> </h3>
+                            <p>
+                                Xodó da Preta é uma marca autoral e inclusiva que produz acessórios e moda afro, com o propósito de vestir todos os corpos, todos os gêneros com representatividade, identidade e versatilidade., além de transmitir alegria através das estampas e cores. Prezamos pela sustentabilidade e economia circular. Marca idealizada e criada pela minha mãe Marli.
+                            </p>
                         </div>
                     </div>
-                    <a class="nav-icon d-none d-lg-inline" href="#" data-bs-toggle="modal" data-bs-target="#templatemo_search">
-                        <i class="fa fa-fw fa-search text-dark mr-2"></i>
-                    </a>
-                    <a class="nav-icon position-relative text-decoration-none" href="#">
-                        <i class="fa fa-fw fa-cart-arrow-down text-dark mr-1"></i>
-                        <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">!</span>
-                    </a>
                 </div>
             </div>
-
         </div>
-    </nav>
-    <!-- Close Header -->
-
-    <!-- Modal -->
-    <div class="modal fade bg-white" id="templatemo_search" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="w-100 pt-1 mb-5 text-right">
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <form action="" method="get" class="modal-content modal-body border-0 p-0">
-                <div class="input-group mb-2">
-                    <input type="text" class="form-control" id="inputModalSearch" name="q" placeholder="Search ...">
-                    <button type="submit" class="input-group-text bg-success text-light">
-                        <i class="fa fa-fw fa-search text-white"></i>
-                    </button>
+        <div class="carousel-item">
+            <div class="container">
+                <div class="row p-5">
+                    <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
+                        <img class="img-fluid" src="{{ url_for('static', filename='zay/assets/img/banner_img_02.jpg') }}" alt="">
+                    </div>
+                    <div class="col-lg-6 mb-0 d-flex align-items-center">
+                        <div class="text-align-left">
+                            <h1 class="h1"> Autenticidade e Inclusão em Cada Estampa </h1>
+                            <h3 class="h2"> Identidade, Versatilidade e Representatividade </h3>
+                            <p>
+                                Nossa moda e acessórios afro são autorais e criados para vestir todos os corpos, todos os gêneros, transmitindo alegria com cores e estampas únicas. Reforçamos nossa essência com práticas de sustentabilidade e economia circular.
+                            </p>
+                        </div>
+                    </div>
                 </div>
-            </form>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="container">
+                <div class="row p-5">
+                    <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
+                        <img class="img-fluid" src="{{ url_for('static', filename='zay/assets/img/banner_img_03.jpg') }}" alt="">
+                    </div>
+                    <div class="col-lg-6 mb-0 d-flex align-items-center">
+                        <div class="text-align-left">
+                            <h1 class="h1">Repr in voluptate</h1>
+                            <h3 class="h2">Ullamco laboris nisi ut </h3>
+                            <p>
+                                We bring you 100% free CSS templates for your websites. 
+                                If you wish to support TemplateMo, please make a small contribution via PayPal or tell your friends about our website. Thank you.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+    <a class="carousel-control-prev text-decoration-none w-auto ps-3" href="#template-mo-zay-hero-carousel" role="button" data-bs-slide="prev">
+        <i class="fas fa-chevron-left"></i>
+    </a>
+    <a class="carousel-control-next text-decoration-none w-auto pe-3" href="#template-mo-zay-hero-carousel" role="button" data-bs-slide="next">
+        <i class="fas fa-chevron-right"></i>
+    </a>
+</div>
+<!-- End Banner Hero -->
 
-
-
-    <!-- Start Banner Hero -->
-    <div id="template-mo-zay-hero-carousel" class="carousel slide" data-bs-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-bs-target="#template-mo-zay-hero-carousel" data-bs-slide-to="0" class="active"></li>
-            <li data-bs-target="#template-mo-zay-hero-carousel" data-bs-slide-to="1"></li>
-            <li data-bs-target="#template-mo-zay-hero-carousel" data-bs-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <div class="container">
-                    <div class="row p-5">
-                        <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                            <img class="img-fluid" src="./assets/img/banner_img_01.jpg" alt="">
-                        </div>
-                        <div class="col-lg-6 mb-0 d-flex align-items-center">
-                            <div class="text-align-left align-self-center">
-                                <h1 class="h1 text-success"><b> </b> Xodo da Preta</h1>
-                                <h3 class="h2"> </h3>
-                                <p>
-                                    Xodó da Preta é uma marca autoral e inclusiva que produz acessórios e moda afro, com o propósito de vestir todos os corpos, todos os gêneros com representatividade, identidade e versatilidade., além de transmitir alegria através das estampas e cores. Prezamos pela sustentabilidade e economia circular. Marca idealizada e criada pela minha mãe Marli.
-                                    <a rel="sponsored" class="text-success" href="https://templatemo.com" target="_blank"></a>  
-                                    <a rel="sponsored" class="text-success" href="https://stories.freepik.com/" target="_blank"> </a>,
-                                    <a rel="sponsored" class="text-success" href="https://unsplash.com/" target="_blank"> </a> 
-                                    <a rel="sponsored" class="text-success" href="https://icons8.com/" target="_blank"> </a>.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="container">
-                    <div class="row p-5">
-                        <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                            <img class="img-fluid" src="./assets/img/banner_img_02.jpg" alt="">
-                        </div>
-                        <div class="col-lg-6 mb-0 d-flex align-items-center">
-                            <div class="text-align-left">
-                                <h1 class="h1"> Autenticidade e Inclusão em Cada Estampa </h1>
-                                <h3 class="h2"> Identidade, Versatilidade e Representatividade </h3>
-                                <p>
-                                    Nossa moda e acessórios afro são autorais e criados para vestir todos os corpos, todos os gêneros, transmitindo alegria com cores e estampas únicas. Reforçamos nossa essência com práticas de sustentabilidade e economia circular.
-                                     <strong></strong> 
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="container">
-                    <div class="row p-5">
-                        <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                            <img class="img-fluid" src="./assets/img/banner_img_03.jpg" alt="">
-                        </div>
-                        <div class="col-lg-6 mb-0 d-flex align-items-center">
-                            <div class="text-align-left">
-                                <h1 class="h1">Repr in voluptate</h1>
-                                <h3 class="h2">Ullamco laboris nisi ut </h3>
-                                <p>
-                                    We bring you 100% free CSS templates for your websites. 
-                                    If you wish to support TemplateMo, please make a small contribution via PayPal or tell your friends about our website. Thank you.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+<!-- Start Categories of The Month -->
+<section class="container py-5">
+    <div class="row text-center pt-3">
+        <div class="col-lg-6 m-auto">
+            <h1 class="h1">Categorias</h1>
+            <p>
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                deserunt mollit anim id est laborum.
+            </p>
         </div>
-        <a class="carousel-control-prev text-decoration-none w-auto ps-3" href="#template-mo-zay-hero-carousel" role="button" data-bs-slide="prev">
-            <i class="fas fa-chevron-left"></i>
-        </a>
-        <a class="carousel-control-next text-decoration-none w-auto pe-3" href="#template-mo-zay-hero-carousel" role="button" data-bs-slide="next">
-            <i class="fas fa-chevron-right"></i>
-        </a>
     </div>
-    <!-- End Banner Hero -->
-
-
-    <!-- Start Categories of The Month -->
-    <section class="container py-5">
-        <div class="row text-center pt-3">
-            <div class="col-lg-6 m-auto">
-                <h1 class="h1">Categorias</h1>
-                <p>
-                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                    deserunt mollit anim id est laborum.
-                </p>
-            </div>
+    <div class="row">
+        <div class="col-12 col-md-4 p-5 mt-3">
+            <a href="#"><img src="{{ url_for('static', filename='zay/assets/img/category_img_01.jpg') }}" class="rounded-circle img-fluid border"></a>
+            <h5 class="text-center mt-3 mb-3">Colares</h5>
         </div>
-        <div class="row">
-            <div class="col-12 col-md-4 p-5 mt-3">
-                <a href="#"><img src="./assets/img/category_img_01.jpg" class="rounded-circle img-fluid border"></a>
-                <h5 class="text-center mt-3 mb-3">Colares</h5>
-            </div>
-            <div class="col-12 col-md-4 p-5 mt-3">
-                <a href="#"><img src="./assets/img/category_img_02.jpg" class="rounded-circle img-fluid border"></a>
-                <h2 class="h5 text-center mt-3 mb-3">Anéis</h2>
-            </div>
-            <div class="col-12 col-md-4 p-5 mt-3">
-                <a href="#"><img src="./assets/img/category_img_03.jpg" class="rounded-circle img-fluid border"></a>
-                <h2 class="h5 text-center mt-3 mb-3">Pulseiras</h2>
-            </div>
+        <div class="col-12 col-md-4 p-5 mt-3">
+            <a href="#"><img src="{{ url_for('static', filename='zay/assets/img/category_img_02.jpg') }}" class="rounded-circle img-fluid border"></a>
+            <h2 class="h5 text-center mt-3 mb-3">Anéis</h2>
         </div>
-    </section>
-    <!-- End Categories of The Month -->
-
-    <!-- Start Footer -->
-    {% include 'partials/footer.html' %}
-    
-
-    <!-- Start Script -->
-    <script src="{{ url_for('static', filename='zay/assets/js/jquery-1.11.0.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='zay/assets/js/jquery-migrate-1.2.1.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='zay/assets/js/bootstrap.bundle.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='zay/assets/js/templatemo.js') }}"></script>
-    <script src="{{ url_for('static', filename='zay/assets/js/custom.js') }}"></script>
-    <!-- Custom JavaScript -->
-    <script src="{{ url_for('static', filename='zay/assets/js/custom.js') }}"></script>
-    <!-- End Script -->
-</body>
-
-</html>
+        <div class="col-12 col-md-4 p-5 mt-3">
+            <a href="#"><img src="{{ url_for('static', filename='zay/assets/img/category_img_03.jpg') }}" class="rounded-circle img-fluid border"></a>
+            <h2 class="h5 text-center mt-3 mb-3">Pulseiras</h2>
+        </div>
+    </div>
+</section>
+<!-- End Categories of The Month -->
+{% endblock %}
