--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -149,21 +149,13 @@
                     <h5><i class="fas fa-info-circle"></i> Informações</h5>
                     
                     <p>
-                        <i class="fas fa-phone"></i>
-                        <strong>Telefone/WhatsApp:</strong><br>
+                        <i class="fab fa-whatsapp"></i>
+                        <strong>WhatsApp:</strong><br>
                         <a href="https://wa.me/5511954375056" target="_blank" class="text-decoration-none">
                             +55 11 95437-5056
                         </a>
                     </p>
-                    
-                    <p>
-                        <i class="fas fa-envelope"></i>
-                        <strong>Email:</strong><br>
-                        <a href="mailto:{{ loja_email }}" class="text-decoration-none">
-                            {{ loja_email }}
-                        </a>
-                    </p>
-                    
+
                     <p>
                         <i class="fab fa-instagram"></i>
                         <strong>Instagram:</strong><br>
@@ -171,7 +163,7 @@
                             @xododapreta
                         </a>
                     </p>
-                    
+
                     <p>
                         <i class="fas fa-map-marker-alt"></i>
                         <strong>Localização:</strong><br>
