--- a/app/templates/partials/footer.html
+++ b/app/templates/partials/footer.html
@@ -28,7 +28,7 @@
             <div class="col-auto me-auto">
                 <ul class="list-inline text-left footer-icons">
                     <li class="list-inline-item border border-light rounded-circle text-center">
-                        <a class="text-light text-decoration-none" target="_blank" href="http://facebook.com/">
+                        <a class="text-light text-decoration-none" target="_blank" href="https://www.facebook.com/xododapreta">
                             <i class="fab fa-facebook-f fa-lg fa-fw"></i>
                         </a>
                     </li>
