alteracoes no carrossel

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,10 +19,10 @@
                     </div>
                     <div class="col-lg-6 mb-0 d-flex align-items-center">
                         <div class="text-align-left align-self-center">
-                            <h1 class="h1 text-success"><b> </b> Xodo da Preta</h1>
-                            <h3 class="h2"> </h3>
+                            <h1 class="h1 text-success"><b> </b> Autenticidade e Inclusão </h1>
+                            <h3 class="h2"> Identidade, Versatilidade e Representatividade </h3>
                             <p>
-                                Xodó da Preta é uma marca autoral e inclusiva que produz acessórios e moda afro, com o propósito de vestir todos os corpos, todos os gêneros com representatividade, identidade e versatilidade., além de transmitir alegria através das estampas e cores. Prezamos pela sustentabilidade e economia circular. Marca idealizada e criada pela minha mãe Marli.
+                                Desenvolvemos moda e acessórios afro autorais que celebram suas raízes. Nossas estampas são únicas e cheias de alegria, com peças pensadas para vestir com conforto e versatilidade todos os corpos e todos os gêneros.
                             </p>
                         </div>
                     </div>
@@ -37,10 +37,10 @@
                     </div>
                     <div class="col-lg-6 mb-0 d-flex align-items-center">
                         <div class="text-align-left">
-                            <h1 class="h1"> Autenticidade e Inclusão em Cada Estampa </h1>
-                            <h3 class="h2"> Identidade, Versatilidade e Representatividade </h3>
+                            <h1 class="h1 text-success"> Uma História de Afeto </h1>
+                            <h3 class="h2"> Xodó da Preta, criada pela minha mãe Marli </h3>
                             <p>
-                                Nossa moda e acessórios afro são autorais e criados para vestir todos os corpos, todos os gêneros, transmitindo alegria com cores e estampas únicas. Reforçamos nossa essência com práticas de sustentabilidade e economia circular.
+                                Mais que uma marca, somos um sonho de família que se tornou realidade. Cada peça é idealizada pela minha mãe, Marli, e carrega o propósito de transmitir identidade, afeto e representatividade
                             </p>
                         </div>
                     </div>
@@ -55,11 +55,10 @@
                     </div>
                     <div class="col-lg-6 mb-0 d-flex align-items-center">
                         <div class="text-align-left">
-                            <h1 class="h1">Repr in voluptate</h1>
-                            <h3 class="h2">Ullamco laboris nisi ut </h3>
+                            <h1 class="h1 text-success"> Produção Consciente </h1>
+                            <h3 class="h2"> Sustentabilidade e Economia Circular </h3>
                             <p>
-                                We bring you 100% free CSS templates for your websites. 
-                                If you wish to support TemplateMo, please make a small contribution via PayPal or tell your friends about our website. Thank you.
+                                Nosso compromisso com o planeta é real. Prezamos por uma produção que respeita o meio ambiente e reforça a economia circular. Isso significa menos desperdício e mais impacto positivo, criando
                             </p>
                         </div>
                     </div>
