troca de imagens no home

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -81,23 +81,25 @@
         <div class="col-lg-6 m-auto">
             <h1 class="h1">Categorias</h1>
             <p>
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                deserunt mollit anim id est laborum.
+                
             </p>
         </div>
     </div>
     <div class="row">
         <div class="col-12 col-md-4 p-5 mt-3">
-            <a href="#"><img src="{{ url_for('static', filename='zay/assets/img/category_img_01.jpg') }}" class="rounded-circle img-fluid border"></a>
-            <h5 class="text-center mt-3 mb-3">Colares</h5>
+            <a href="#"> 
+                <img src="{{ url_for('static', filename='zay/assets/img/meu-colar.jpeg') }}" class="rounded-circle img-fluid border" style="width: 300px; height: 300px; object-fit: cover; aspect-ratio: 1 / 1 ; object-fit: cover;">
+                    <h5 class="text-center mt-3 mb-3">Colares</h5> </a>   
         </div>
         <div class="col-12 col-md-4 p-5 mt-3">
-            <a href="#"><img src="{{ url_for('static', filename='zay/assets/img/category_img_02.jpg') }}" class="rounded-circle img-fluid border"></a>
-            <h2 class="h5 text-center mt-3 mb-3">Anéis</h2>
+            <a href="#">
+                <img src="{{ url_for('static', filename='zay/assets/img/meu-anel.jpeg') }}" class="rounded-circle img-fluid border"  style="width: 300px; height: 300px; object-fit: cover;" >
+                    <h2 class="h5 text-center mt-3 mb-3">Anéis</h2> </a>
         </div>
         <div class="col-12 col-md-4 p-5 mt-3">
-            <a href="#"><img src="{{ url_for('static', filename='zay/assets/img/category_img_03.jpg') }}" class="rounded-circle img-fluid border"></a>
-            <h2 class="h5 text-center mt-3 mb-3">Pulseiras</h2>
+            <a href="#">
+                <img src="{{ url_for('static', filename='zay/assets/img/minha-pulseira.jpeg') }}" class="rounded-circle img-fluid border" style="width: 300px; height: 300px; object-fit: cover;" >
+                    <h2 class="h5 text-center mt-3 mb-3">Pulseiras</h2> </a>
         </div>
     </div>
 </section>
